# sast-readium

./: .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  WORKFLOW_REORGANIZATION_SUMMARY.md  mkdocs.yml  ui_reorganization_mapping.md  vcpkg-configuration.json  vcpkg.json  xmake.lua
.github/workflows/: Build.yml  linux.yml  macos.yml  msys2-build.yml  package.yml  windows.yml
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Widget.ui  app.qrc  app.rc  config.h.in  main.cpp
app/cache/: PDFCacheManager.cpp  PDFCacheManager.h  UnifiedCacheSystem.cpp  UnifiedCacheSystem.h
app/command/: Commands.cpp  Commands.h
app/components/: MenuBar.cpp  MenuBar.h  SideBar.cpp  SideBar.h  StatusBar.cpp  StatusBar.h  ToolBar.cpp  ToolBar.h  ViewWidget.cpp  ViewWidget.h
app/components/command/: Commands.cpp  Commands.h
app/components/controller/: Controller.cpp  Controller.h  tool.hpp
app/components/delegate/: PageNavigationDelegate.cpp  PageNavigationDelegate.h
app/components/factory/: WidgetFactory.cpp  WidgetFactory.h
app/components/model/: PageModel.cpp  PageModel.h
app/components/view/: Views.cpp  Views.h
app/controller/: Controller.cpp  Controller.h  CoreController.cpp  CoreController.h  DocumentController.cpp  DocumentController.h  PageController.cpp  PageController.h  tool.hpp
app/delegate/: PageNavigationDelegate.cpp  PageNavigationDelegate.h  ThumbnailDelegate.cpp  ThumbnailDelegate.h
app/example/: Widget.cpp  Widget.h  Widget.ui
app/factory/: WidgetFactory.cpp  WidgetFactory.h
app/i18n/: app_zh.ts
app/managers/: AccessibilityManager.cpp  AccessibilityManager.h  FileTypeIconManager.cpp  FileTypeIconManager.h  RecentFilesManager.cpp  RecentFilesManager.h  StyleManager.cpp  StyleManager.h
app/model/: AnnotationModel.cpp  AnnotationModel.h  AsyncDocumentLoader.cpp  AsyncDocumentLoader.h  BookmarkModel.cpp  BookmarkModel.h  DocumentModel.cpp  DocumentModel.h  PDFModel.cpp  PDFModel.h  PDFOutlineModel.cpp  PDFOutlineModel.h  PageModel.cpp  PageModel.h  RenderModel.cpp  RenderModel.h  SearchModel.cpp  SearchModel.h  ThumbnailModel.cpp  ThumbnailModel.h
app/performance/: AdvancedMemoryManager.cpp  AdvancedMemoryManager.h  PDFPrerenderer.h  PerformanceMonitor.cpp  PerformanceMonitor.h  SmartPrerenderEngine.cpp  SmartPrerenderEngine.h  UnifiedRenderManager.cpp  UnifiedRenderManager.h
app/plugin/: PluginManager.cpp  PluginManager.h
app/ui/: MenuBar.cpp  MenuBar.h  SideBar.cpp  SideBar.h  StatusBar.cpp  StatusBar.h  ToolBar.cpp  ToolBar.h  ViewWidget.cpp  ViewWidget.h
app/ui/core/: AdvancedShortcutManager.cpp  AdvancedShortcutManager.h  MenuBar.cpp  MenuBar.h  ResponsivenessOptimizer.cpp  ResponsivenessOptimizer.h  RightSideBar.cpp  RightSideBar.h  SideBar.cpp  SideBar.h  StatusBar.cpp  StatusBar.h  ToolBar.cpp  ToolBar.h  ViewWidget.cpp  ViewWidget.h
app/ui/dialogs/: DocumentComparison.cpp  DocumentComparison.h  DocumentMetadataDialog.cpp  DocumentMetadataDialog.h
app/ui/managers/: AccessibilityManager.cpp  AccessibilityManager.h  PerformanceMonitor.cpp  WelcomeScreenManager.cpp  WelcomeScreenManager.h
app/ui/thumbnail/: ThumbnailAnimations.h  ThumbnailCacheAdapter.h  ThumbnailContextMenu.cpp  ThumbnailContextMenu.h  ThumbnailDelegate.cpp  ThumbnailDelegate.h  ThumbnailGenerator.cpp  ThumbnailGenerator.h  ThumbnailListView.cpp  ThumbnailListView.h  ThumbnailLoadingIndicator.h  ThumbnailModel.cpp  ThumbnailModel.h  ThumbnailPerformanceOptimizer.h  ThumbnailSystemTest.cpp  ThumbnailVirtualizer.h  ThumbnailWidget.cpp  ThumbnailWidget.h
app/ui/viewer/: PDFAnimations.cpp  PDFAnimations.h  PDFOutlineWidget.cpp  PDFOutlineWidget.h  PDFPrerenderer.cpp  PDFPrerenderer.h  PDFRenderingDemo.cpp  PDFRenderingDemo.h  PDFViewer.cpp  PDFViewer.h  PDFViewerEnhancements.cpp  PDFViewerEnhancements.h  QGraphicsPDFViewer.cpp  QGraphicsPDFViewer.h
app/ui/widgets/: AdvancedAnnotationSystem.cpp  AdvancedAnnotationSystem.h  AdvancedSearchWidget.cpp  AdvancedSearchWidget.h  AnnotationToolbar.cpp  AnnotationToolbar.h  BookmarkWidget.cpp  BookmarkWidget.h  DebugLogPanel.cpp  DebugLogPanel.h  DocumentTabWidget.cpp  DocumentTabWidget.h  RecentFileListWidget.cpp  RecentFileListWidget.h  SearchWidget.cpp  SearchWidget.h  SmartBookmarkSystem.cpp  SmartBookmarkSystem.h  SmartProgressSystem.cpp  SmartProgressSystem.h  WelcomeWidget.cpp  WelcomeWidget.h
app/utils/: DocumentAnalyzer.cpp  DocumentAnalyzer.h  Logger.cpp  Logger.h  LoggingConfig.cpp  LoggingConfig.h  LoggingMacros.cpp  LoggingMacros.h  LoggingManager.cpp  LoggingManager.h  PDFUtilities.cpp  PDFUtilities.h  QtSpdlogBridge.cpp  QtSpdlogBridge.h
app/view/: Views.cpp  Views.h
assets/styles/: dark.qss  light.qss  thumbnails.qss
cmake/toolchains/: aarch64-linux-gnu.cmake
config/: logging-dev.json  logging.json
controls/: CMakeLists.txt  Slider.cpp  Slider.h
distrib/: pack.nsi
docs/: CLANGD-SETUP.md  DEPENDENCY_MANAGEMENT.md  PLATFORM_SUPPORT.md  QGraphics_PDF_Support.md  ThumbnailSystem.md  clangd-configuration.md  debugging-setup.md  index.md  logging-system.md
docs/build-systems/: build-system-comparison.md  index.md
docs/build-systems/xmake/: index.md  xmake-build.md  xmake-final-report.md  xmake-status.md
docs/features/: index.md
docs/getting-started/: dependency-management.md  index.md  platform-support.md
docs/setup/: clangd-setup.md  index.md  msys2-build.md
examples/: qgraphics_pdf_demo.cpp
scripts/: README.md  build-msys2.bat  build-msys2.sh  check-msys2-deps.sh  package.ps1  package.sh  restart-clangd.ps1  restart-clangd.sh  run_qgraphics_tests.bat  run_qgraphics_tests.py  test-clangd-config.ps1  test-debug-setup.ps1  test-debug-setup.sh  test-msys2-build.sh  test_qgraphics.cmd  update-clangd-config.bat  update-clangd-config.ps1  update-clangd-config.sh
test/: clangd-test.cpp
tests/: CMakeLists.txt  smoke_test.cpp  test_qgraphics_pdf.cpp
tests/integration/: test_rendering_mode_switch.cpp
tests/performance/: test_rendering_performance.cpp
tests/real_world/: test_real_pdf_documents.cpp
tests/unit/: test_qgraphics_components.cpp
